# ai-event-manager

./: .env.example  .gitignore  CROWDFLOW_README.md  CrowdFlow_AI_Complete_Documentation.md  Dockerfile  PLAN_FRONTEND_COMPONENTS.md  README.md  WINNING_SYSTEM_SUMMARY.md  backend_test_ui.py  check_aws.py  debug_aws_optimization.py  debug_aws_optimization_fixed.py  demonstrate_wait_time.py  lifecycle_app.py  main.py  markdownlint.json  pyproject.toml  requirements.txt  test_aws_integration.py
.elasticbeanstalk/: config.yml
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: ai-event-manager-custom-template.md
.github/workflows/: ci.yml
data/: event_config.json  venue_map.csv
data/concert_venue/: event_config.json  venue_map.csv
data/conference_center/: event_config.json  venue_map.csv
data/festival/: event_config.json  venue_map.csv
notebooks/: Untitled-1.ipynb
src/: app.py  shared_models.py
src/aws/: ai_validation.py  bedrock.py  cost_aware_bedrock.py  enhanced_bedrock.py  image_generation.py  lifecycle_bedrock.py  lifecycle_bedrock_fixed.py
src/simulation/: core.py  dynamic_layout.py  lifecycle_core.py  models.py  simulation_runners.py  time_converter.py  venue_modifier.py
src/stubs/: mock_backend.py
src/visualization/: __init__.py  about.py  core.py  demo.py  simulation.py  what-if.py
tests/: test_ai_recommendations.py  test_bedrock.py  test_simulation.py
